fix (adv text block): content vertical align was not applied to text

--- a/src/block/text/style.scss
+++ b/src/block/text/style.scss
@@ -12,6 +12,10 @@
 	grid-auto-flow: column;
 	grid-column-gap: #{ $box-hori-padding };
 }
+.ugb-text__text {
+	display: flex;
+	flex-direction: column;
+}
 
 /**
  * Template grid for column rules.
